welcome.lessons.welcome.variables.Variables.scala.error
Variables:3: error: value update is not a member of Boolean
while (estSurBiscuit()=false){
       ^Variables:7: error: value <> is not a member of Int
while (dejafait<>nbpas){
               ^